--- a/www/custom.css
+++ b/www/custom.css
@@ -255,7 +255,7 @@
   /* MDNA page specific welcome box */
   .welcome-box.mdna-page {
     position: relative;
-    width: 100%;
+    width: 98%;
     height: calc(100vh - 100px);
     background: white;
     padding: 20px;
@@ -944,7 +944,27 @@
     width: 100%;
     height: 540px;
     border-radius: 10px;
-    background: var(--White-White, #ff0000);
+    background: 
+    radial-gradient(circle, 
+      transparent 0%, 
+      transparent 20%, 
+      rgba(128, 128, 128, 0.3) 20%, 
+      rgba(128, 128, 128, 0.3) 21%, 
+      transparent 21%, 
+      transparent 40%, 
+      rgba(128, 128, 128, 0.3) 40%, 
+      rgba(128, 128, 128, 0.3) 41%, 
+      transparent 41%, 
+      transparent 60%, 
+      rgba(128, 128, 128, 0.3) 60%, 
+      rgba(128, 128, 128, 0.3) 61%, 
+      transparent 61%, 
+      transparent 80%,
+      rgba(128, 128, 128, 0.3) 80%, 
+      rgba(128, 128, 128, 0.3) 81%, 
+      transparent 81%, 
+      transparent 110%),  
+    var(--White-White, #ffffff); /* Fallback solid background color */
     box-shadow: 0px 4px 12px 0px rgba(13, 10, 44, 0.06);
     position: relative;
     overflow: hidden;
