--- a/www/custom.css
+++ b/www/custom.css
@@ -943,6 +943,7 @@
   .mdna-visualization-container-custom {
     width: 100%;
     height: 540px;
+    min-width: 400px;
     border-radius: 10px;
     background: 
     radial-gradient(circle, 
@@ -975,7 +976,8 @@
 
   /* Left-side visualization container for Nerd mode */
   .mdna-visualization-container-nerd {
-    flex: 0 0 48%;  /* Set width to 48% */
+    flex: 0 0 58%;  /* Set width to 48% */
+    min-width: 400px;
     height: 495px;
     border-radius: 10px;
     background: var(--White-White, #FFF);
@@ -991,14 +993,14 @@
 
   /* Right-side song details container */
   .song-details-container-custom {
-    flex: 0 0 48%;  /* Set width to 48% */
-    height: auto;
+    flex: 0 0 38%;  /* Set width to 38% */
+    height: 540px;
     border-radius: 10px;
     background: var(--White-White, #FFF);
     box-shadow: 0px 4px 12px rgba(13, 10, 44, 0.06);
     position: relative;
     overflow: hidden;
-    margin: 0;
+    /* margin: px; */
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -1214,7 +1216,7 @@
     padding: 10px;
     overflow-y: auto;
     width: 456px;
-    height: 405px;
+    height: 100%;
     flex-shrink: 0;
     border-radius: 10px;
     background: 
@@ -1316,7 +1318,7 @@
   }
 
   .mdna-main-container.nerd-mode .song-details-container-custom {
-    flex: 0 0 33.333%;  /* Same as non-nerd mode */
+    flex: 0 0 38%;  /* Same as non-nerd mode */
     height: 540px;
     border-radius: 10px;
     background: var(--White-White, #FFF);
@@ -1360,24 +1362,9 @@
   /* Left-side container styling */
   .mdna-main-container .left-side-container {
     flex: 1; /* Allow to grow and shrink */
+    min-width: 350px;
     margin: 0;
     padding: 0;
-  }
-
-  /* Right-side song details container styling */
-  .mdna-main-container .song-details-container-custom {
-    width: 188px;
-    height: 540px;
-    padding: 20px 12px; /* top-bottom, left-right */
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    background: var(--White-White, #FFF);
-    box-shadow: 0px 4px 12px rgba(13, 10, 44, 0.06);
-    margin: 0;
   }
 
   /* Remove any default margins and paddings from child containers */
@@ -1804,25 +1791,13 @@
   right: 50px;
   height: calc(100vh - 100px);  /* Match navbar height */
   width: calc(100vw - 360px);
+  min-width: 700px;
   background: white;
   padding: 20px;
   box-sizing: border-box;
   z-index: 100;
   border-radius: 10px;
   overflow-y: auto;  /* Allow scrolling if content is too long */
-}
-
-/* Nerd mode containers */
-.mdna-main-container.nerd-mode .mdna-visualization-container-nerd,
-.mdna-main-container.nerd-mode .welcome-box.mdna-page {
-  width: calc(50% - 12px);
-  height: 540px;
-  border-radius: 10px;
-  background: var(--White-White, #FFF);
-  box-shadow: 0px 4px 12px 0px rgba(13, 10, 44, 0.06);
-  position: relative;
-  overflow: hidden;
-  margin: 0;
 }
 
 /* Additional padding for welcome box */
